# CP77Mods

./: README.md
src/Improved Minimap Zoom/: .gitattributes  .gitignore  Improved Minimap Zoom.code-workspace  Make-Release-Zip.ps1  README.md
src/Improved Minimap Zoom/native/: CMakeLists.txt  RESEARCH.md
src/Improved Minimap Zoom/native/Plugins/: CMakeLists.txt  Log.cpp  Log.h  Main.cpp  MinimapDump.cpp  MinimapDump.h
src/Improved Minimap Zoom/r6/scripts/ImprovedMinimapZoom/: imznative.reds  minimapcontainer.reds  playerpuppet.reds  utils.reds
src/Revised Backpack/: red.config.json
src/Revised Backpack/Release/r6/scripts/RevisedBackpack/: RevisedBackpack.reds
src/Revised Backpack/Sources/Scripts/RevisedBackpack/: Utils.reds
